RESOLVED FIXED 278473
Memory leak in `accessibilityAttributeValue:forParameter:`
https://bugs.webkit.org/show_bug.cgi?id=278473
Summary Memory leak in `accessibilityAttributeValue:forParameter:`
Charlie Wolfe
Reported 2024-08-21 11:05:47 PDT
`[NSMutableDictionary alloc]` and `[NSArray alloc]` both return objects with a +1 retain count.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-21 11:05:55 PDT
Charlie Wolfe
Comment 2 2024-08-21 11:06:44 PDT
EWS
Comment 3 2024-08-21 12:34:26 PDT
Committed 282573@main (c0838d7a980e): <https://commits.webkit.org/282573@main> Reviewed commits have been landed. Closing PR #32537 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.