Memory leak in `accessibilityAttributeValue:forParameter:` https://bugs.webkit.org/show_bug.cgi?id=278473 rdar://134431039

Reviewed by David Kilzer.

`[NSMutableDictionary alloc]` and `[NSArray alloc]` both return objects with a +1 retain count.

* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):

Canonical link: https://commits.webkit.org/282573@main